fixed alignment issue in h3 for projectsion section

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -169,7 +169,7 @@
 
     .stack {
       display: flex;
-      justify-content: center ;
+      justify-content: center;
     }
   }
  
@@ -221,7 +221,7 @@
     }
   }
 
-  .projectRight > h3 {
+  .projectRight > h3, .projectLeft > h3{
       text-align: center;
   }
 
